Refactor(deposit): MSA 모듈분리를 위한 Product 도메인 리펙터링